# CPP-Game-Laboratory

games/battleships/: answers.md  specification.md
games/battleships/battleships_buggy/: CMakeLists.txt
games/battleships/battleships_buggy/apps/battleships_cli/: main.cpp
games/battleships/battleships_buggy/src/core/: Board.cpp  Game.h
